change of website link structure
removed subdomains
added hosting thinks

--- a/about/index.html
+++ b/about/index.html
@@ -9,12 +9,12 @@
     <h1>About 4QR.xyz</h1>
     <p>4QR.xyz is an online interactive artwork which allows the complete embedding of a web page into a URL.</p>
     <h3>Making your own</h3>
-    <p>The <a href="http://encode.4QR.xyz/">encoder</a> allows you to encode your own wepage into a URL.
+    <p>The <a href="https://4QR.xyz/encode">encoder</a> allows you to encode your own wepage into a URL.
         <br/> Anything that can be displayed by a web browser can be encoded.
-        <br/> Technical info can be found in the <a href="http://reference.4QR.xyz/">reference</a></p>
+        <br/> Technical info can be found in the <a href="https://4QR.xyz/reference">reference</a></p>
     <h3>Sharing</h3>
     <p>To share your code, consider posting your link on <a href="https://reddit.com/r/4QRxyz/">the 4QR.xyz subreddit.</a>
-        <br> Some of the best code will be curated into <a href="http://gallery.4QR.xyz/">the gallery.</a></p>
+        <br> Some of the best code will be curated into <a href="https://4QR.xyz/gallery">the gallery.</a></p>
     <h3>Issues / Comments / Questions</h3>
     <p>Site issues and feature requests can be reported to the issues page of <a href="https://github.com/artBoffin/4QR.xyz/issues/">the 4QR.xyz GitHub page.</a>
         <br> Questions and/or comments can be addressed to the <a href="mailto:4QRxyz@0box.eu"> 4QR.xyz e-mail address</a>
@@ -23,7 +23,7 @@
     <h3>Q&amp;A</h3>
     <h4>Q: What is the purpose of this site?</h4>
     <p>
-        A: 4QR.xyz was originally created by <a href="http://www.areben.com/">Alexander Reben</a> to encode digital artworks into QR codes.
+        A: 4QR.xyz was originally created by <a href="https://www.areben.com/">Alexander Reben</a> to encode digital artworks into QR codes.
         <br> QR codes with an embedded URL will directly open in a browser when read.
         <br> So a website was created to render the data contained in a URL into a browser.
         <br> This allows all the data needed to make a webpage to be rendered without that webpage hosted on a server.
@@ -37,7 +37,7 @@
     </p>
     <h4>Q: Can I find out more about the code in this site?</h4>
     <p>
-        A: Check out the <a href="http://refrence.4QR.xyz/">refrence page</a> or the <a href="https://github.com/artBoffin/4QR.xyz">GitHub page</a>.
+        A: Check out the <a href="https://4QR.xyz/refrence">refrence page</a> or the <a href="https://github.com/artBoffin/4QR.xyz">GitHub page</a>.
     </p>
     <h4>Q: Does my code run on your server?</h4>
     <p>
@@ -69,6 +69,9 @@
             <br>TRADE SECRET, COPYRIGHT, RIGHT OF PUBLICITY, OR OTHER RIGHTS;
             <br>IS PRIMARILY FOR COMMERCIAL USE.
     </a>
+    <br>
+    <br>
+    <p>Thank you to <a href="https://www.netlify.com">netlify</a> for their free open source hosting.</p>
 </body>
 
 </html>
