--- a/encode/index.html
+++ b/encode/index.html
@@ -110,7 +110,7 @@ function run() {
 
 <body>
     <h1>Encoder for 4QR.xyz</h1>
-    <a href="http://about.4QR.xyz">About this website</a>
+    <a href="https://4QR.xyz/about/">About this website</a>
     <br/>
     <p>Enter in code below, then click encode button.</p>
     <textarea name="text input" id="textInput" rows="20" cols="80"></textarea>
@@ -120,29 +120,29 @@ function run() {
         <input type="checkbox" ; id="qr" ;>Generate QR codes</label>
     <br/>
     <label>
-        <input type="radio" ; name="library" ; value="c/?" ; checked="checked" ;>Compressed (default)</label><a href="http://reference.4QR.xyz/#com"> ?</a>
+        <input type="radio" ; name="library" ; value="c/?" ; checked="checked" ;>Compressed (default)</label><a href="https://4QR.xyz/reference/#com"> ?</a>
     <br/>
     <label>
-        <input type="radio" ; name="library" ; value="r/?" ;>No compression</label><a href="http://reference.4QR.xyz/#noc"> ?</a>
+        <input type="radio" ; name="library" ; value="r/?" ;>No compression</label><a href="https://4QR.xyz/reference/#noc"> ?</a>
     <br/>
     <p>Include library wrapper (default compressed):</p>
     <label>
-        <input type="radio" ; name="library" ; value="p5/.0/?" ;>P5.js v0.5.8</label><a href="http://reference.4QR.xyz/#p5"> ?</a>
+        <input type="radio" ; name="library" ; value="p5/.0/?" ;>P5.js v0.5.8</label><a href="https://4QR.xyz/reference/#p5"> ?</a>
     <br/>
     <label>
     <label>
-        <input type="radio" ; name="library" ; value="pa/.q/?" ;>paper.js v0.11.3</label><a href="http://reference.4QR.xyz/#pa"> ?</a>
+        <input type="radio" ; name="library" ; value="pa/.q/?" ;>paper.js v0.11.3</label><a href="https://4QR.xyz/reference/#pa"> ?</a>
     <br/>
     <label>
     <label>
-        <input type="radio" ; name="library" ; value="th/BN/?" ;>three.js v85</label><a href="http://reference.4QR.xyz/#th"> ?</a>
+        <input type="radio" ; name="library" ; value="th/BN/?" ;>three.js v85</label><a href="https://4QR.xyz/reference/#th"> ?</a>
     <br/>
     <label>
-        <input type="radio" ; name="library" ; value="dw/?" ;>Dwitter</label><a href="http://reference.4QR.xyz/#dw"> ?</a>
+        <input type="radio" ; name="library" ; value="dw/?" ;>Dwitter</label><a href="https://4QR.xyz/reference/#dw"> ?</a>
     <br/>
     <br/>
     <input type="submit" name="button" id="encode" onclick="run()" value="Encode" />
-    <p>By clicking encode you accept the terms of service linked <a href="http://about.4QR.xyz/#legal" target="_blank">HERE.</a></p>
+    <p>By clicking encode you accept the terms of service linked <a href="https://about.4QR.xyz/#legal" target="_blank">HERE.</a></p>
     <hr>
     <br/>
     <br/>
