--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>4QR.xyz Gallery</h1>
     <p>Gallery page for 4QR.xyz</p>
-    <p><a href="http://about.4QR.xyz">About</a> this site.</p>
+    <p><a href="https://4QR.xyz/about/">About</a> this site.</p>
     <p>Some selected works made with 4QR.xyz</p>
     <p>Submit your work for consideration at the <a href="https://reddit.com/r/4QRxyz/">4QR.xyz reddit page</a>.</p>
     <br/>
