--- a/encode/index.html
+++ b/encode/index.html
@@ -142,7 +142,7 @@ function run() {
     <br/>
     <br/>
     <input type="submit" name="button" id="encode" onclick="run()" value="Encode" />
-    <p>By clicking encode you accept the terms of service linked <a href="https://about.4QR.xyz/#legal" target="_blank">HERE.</a></p>
+    <p>By clicking encode you accept the terms of service linked <a href="https://www.4QR.xyz/about/#legal" target="_blank">HERE.</a></p>
     <hr>
     <br/>
     <br/>
