added www prefix

--- a/about/index.html
+++ b/about/index.html
@@ -9,12 +9,12 @@
     <h1>About 4QR.xyz</h1>
     <p>4QR.xyz is an online interactive artwork which allows the complete embedding of a web page into a URL.</p>
     <h3>Making your own</h3>
-    <p>The <a href="https://4QR.xyz/encode">encoder</a> allows you to encode your own wepage into a URL.
+    <p>The <a href="https://www.4QR.xyz/encode">encoder</a> allows you to encode your own wepage into a URL.
         <br/> Anything that can be displayed by a web browser can be encoded.
-        <br/> Technical info can be found in the <a href="https://4QR.xyz/reference">reference</a></p>
+        <br/> Technical info can be found in the <a href="https://www.4QR.xyz/reference">reference</a></p>
     <h3>Sharing</h3>
     <p>To share your code, consider posting your link on <a href="https://reddit.com/r/4QRxyz/">the 4QR.xyz subreddit.</a>
-        <br> Some of the best code will be curated into <a href="https://4QR.xyz/gallery">the gallery.</a></p>
+        <br> Some of the best code will be curated into <a href="https://www.4QR.xyz/gallery">the gallery.</a></p>
     <h3>Issues / Comments / Questions</h3>
     <p>Site issues and feature requests can be reported to the issues page of <a href="https://github.com/artBoffin/4QR.xyz/issues/">the 4QR.xyz GitHub page.</a>
         <br> Questions and/or comments can be addressed to the <a href="mailto:4QRxyz@0box.eu"> 4QR.xyz e-mail address</a>
@@ -37,7 +37,7 @@
     </p>
     <h4>Q: Can I find out more about the code in this site?</h4>
     <p>
-        A: Check out the <a href="https://4QR.xyz/refrence">refrence page</a> or the <a href="https://github.com/artBoffin/4QR.xyz">GitHub page</a>.
+        A: Check out the <a href="https://www.4QR.xyz/refrence">refrence page</a> or the <a href="https://github.com/artBoffin/4QR.xyz">GitHub page</a>.
     </p>
     <h4>Q: Does my code run on your server?</h4>
     <p>
