--- a/encode/index.html
+++ b/encode/index.html
@@ -51,9 +51,9 @@ function encodeAddress() {
             to: 'string'
         }));
         compressed = compressed.replace(/\+/g, '-').replace(/\//g, '_').replace(/\=/g, '');
-        var addr = "https://4QR.xyz/" + selectedLib + compressed;
+        var addr = "https://www.4QR.xyz/" + selectedLib + compressed;
     } else {
-        var addr = "https://4QR.xyz/r/?" + encodeURIComponent(btoa(inCode));
+        var addr = "https://www.4QR.xyz/r/?" + encodeURIComponent(btoa(inCode));
     }
     return addr;
 }
@@ -110,7 +110,7 @@ function run() {
 
 <body>
     <h1>Encoder for 4QR.xyz</h1>
-    <a href="https://4QR.xyz/about/">About this website</a>
+    <a href="https://www.4QR.xyz/about/">About this website</a>
     <br/>
     <p>Enter in code below, then click encode button.</p>
     <textarea name="text input" id="textInput" rows="20" cols="80"></textarea>
@@ -120,25 +120,25 @@ function run() {
         <input type="checkbox" ; id="qr" ;>Generate QR codes</label>
     <br/>
     <label>
-        <input type="radio" ; name="library" ; value="c/?" ; checked="checked" ;>Compressed (default)</label><a href="https://4QR.xyz/reference/#com"> ?</a>
+        <input type="radio" ; name="library" ; value="c/?" ; checked="checked" ;>Compressed (default)</label><a href="https://www.4QR.xyz/reference/#com"> ?</a>
     <br/>
     <label>
-        <input type="radio" ; name="library" ; value="r/?" ;>No compression</label><a href="https://4QR.xyz/reference/#noc"> ?</a>
+        <input type="radio" ; name="library" ; value="r/?" ;>No compression</label><a href="https://www.4QR.xyz/reference/#noc"> ?</a>
     <br/>
     <p>Include library wrapper (default compressed):</p>
     <label>
-        <input type="radio" ; name="library" ; value="p5/.0/?" ;>P5.js v0.5.8</label><a href="https://4QR.xyz/reference/#p5"> ?</a>
+        <input type="radio" ; name="library" ; value="p5/.0/?" ;>P5.js v0.5.8</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
     <br/>
     <label>
     <label>
-        <input type="radio" ; name="library" ; value="pa/.q/?" ;>paper.js v0.11.3</label><a href="https://4QR.xyz/reference/#pa"> ?</a>
+        <input type="radio" ; name="library" ; value="pa/.q/?" ;>paper.js v0.11.3</label><a href="https://www.4QR.xyz/reference/#pa"> ?</a>
     <br/>
     <label>
     <label>
-        <input type="radio" ; name="library" ; value="th/BN/?" ;>three.js v85</label><a href="https://4QR.xyz/reference/#th"> ?</a>
+        <input type="radio" ; name="library" ; value="th/BN/?" ;>three.js v85</label><a href="https://www.4QR.xyz/reference/#th"> ?</a>
     <br/>
     <label>
-        <input type="radio" ; name="library" ; value="dw/?" ;>Dwitter</label><a href="https://4QR.xyz/reference/#dw"> ?</a>
+        <input type="radio" ; name="library" ; value="dw/?" ;>Dwitter</label><a href="https://www.4QR.xyz/reference/#dw"> ?</a>
     <br/>
     <br/>
     <input type="submit" name="button" id="encode" onclick="run()" value="Encode" />
