--- a/about/index.html
+++ b/about/index.html
@@ -37,7 +37,7 @@
     </p>
     <h4>Q: Can I find out more about the code in this site?</h4>
     <p>
-        A: Check out the <a href="https://www.4QR.xyz/refrence">refrence page</a> or the <a href="https://github.com/artBoffin/4QR.xyz">GitHub page</a>.
+        A: Check out the <a href="https://www.4QR.xyz/reference">reference page</a> or the <a href="https://github.com/artBoffin/4QR.xyz">GitHub page</a>.
     </p>
     <h4>Q: Does my code run on your server?</h4>
     <p>
