new ver name update

--- a/encode/index.html
+++ b/encode/index.html
@@ -127,15 +127,15 @@ function run() {
     <br/>
     <p>Include library wrapper (default compressed):</p>
     <label>
-        <input type="radio" ; name="library" ; value="p5/.0/?" ;>P5.js v0.5.8</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
+        <input type="radio" ; name="library" ; value="p5/1m/?" ;>P5.js v0.5.8</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
     <br/>
     <label>
     <label>
-        <input type="radio" ; name="library" ; value="pa/.q/?" ;>paper.js v0.11.3</label><a href="https://www.4QR.xyz/reference/#pa"> ?</a>
+        <input type="radio" ; name="library" ; value="pa/1a/?" ;>paper.js v0.11.3</label><a href="https://www.4QR.xyz/reference/#pa"> ?</a>
     <br/>
     <label>
     <label>
-        <input type="radio" ; name="library" ; value="th/BN/?" ;>three.js v85</label><a href="https://www.4QR.xyz/reference/#th"> ?</a>
+        <input type="radio" ; name="library" ; value="th/2d/?" ;>three.js v85</label><a href="https://www.4QR.xyz/reference/#th"> ?</a>
     <br/>
     <label>
         <input type="radio" ; name="library" ; value="dw/?" ;>Dwitter</label><a href="https://www.4QR.xyz/reference/#dw"> ?</a>
