--- a/about/index.html
+++ b/about/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>About 4QR.xyz</h1>
     <p>4QR.xyz is an online interactive artwork which allows the complete embedding of a web page into a URL.</p>
+    <h3><a href="https://www.4qr.xyz/encode">Encode</a>||<a href="https://www.4qr.xyz/reference">Reference</a>||<a href="https://www.4qr.xyz/gallery">Gallery</a></h3>
+    <br>
     <h3>Making your own</h3>
     <p>The <a href="https://www.4QR.xyz/encode">encoder</a> allows you to encode your own wepage into a URL.
         <br/> Anything that can be displayed by a web browser can be encoded.
@@ -16,14 +18,14 @@
     <p>To share your code, consider posting your link on <a href="https://reddit.com/r/4QRxyz/">the 4QR.xyz subreddit.</a>
         <br> Some of the best code will be curated into <a href="https://www.4QR.xyz/gallery">the gallery.</a></p>
     <h3>Issues / Comments / Questions</h3>
-    <p>Site issues and feature requests can be reported to the issues page of <a href="https://github.com/artBoffin/4QR.xyz/issues/">the 4QR.xyz GitHub page.</a>
+    <p>Site issues and feature requests can be reported to the issues page of <a href="https://github.com/artBoffin/4QR.xyz/issues">the 4QR.xyz GitHub page.</a>
         <br> Questions and/or comments can be addressed to the <a href="mailto:4QRxyz@0box.eu"> 4QR.xyz e-mail address</a>
         <br>(all emails are read but may not be replied to).
         <br> News will be posted to <a href="https://twitter.com/4QRxyz">twitter</a>.</p>
     <h3>Q&amp;A</h3>
     <h4>Q: What is the purpose of this site?</h4>
     <p>
-        A: 4QR.xyz was originally created by <a href="https://www.areben.com/">Alexander Reben</a> to encode digital artworks into QR codes.
+        A: 4QR.xyz was originally created by <a href="https://www.areben.com">Alexander Reben</a> to encode digital artworks into QR codes.
         <br> QR codes with an embedded URL will directly open in a browser when read.
         <br> So a website was created to render the data contained in a URL into a browser.
         <br> This allows all the data needed to make a webpage to be rendered without that webpage hosted on a server.
