--- a/about/index.html
+++ b/about/index.html
@@ -9,13 +9,14 @@
     <h1>About 4QR.xyz</h1>
     <p>4QR.xyz is an online interactive artwork which allows the complete embedding of a web page into a URL.</p>
     <h3><a href="https://www.4qr.xyz/encode"> Encode </a>| |<a href="https://www.4qr.xyz/reference"> Reference </a>| |<a href="https://www.4qr.xyz/gallery"> Gallery </a></h3>
+    <h3><a href="https://www.reddit.com/r/4QRxyz"> Subreddit </a>| |<a href="https://github.com/artBoffin/4QR.xyz"> GitHub </a>| |<a href="https://twitter.com/4QRxyz"> Twitter </a></h3>
     <br>
     <h3>Making your own</h3>
     <p>The <a href="https://www.4QR.xyz/encode">encoder</a> allows you to encode your own wepage into a URL.
         <br/> Anything that can be displayed by a web browser can be encoded.
         <br/> Technical info can be found in the <a href="https://www.4QR.xyz/reference">reference</a></p>
     <h3>Sharing</h3>
-    <p>To share your code, consider posting your link on <a href="https://reddit.com/r/4QRxyz/">the 4QR.xyz subreddit.</a>
+    <p>To share your code, consider posting your link on <a href="https://reddit.com/r/4QRxyz">the 4QR.xyz subreddit.</a>
         <br> Some of the best code will be curated into <a href="https://www.4QR.xyz/gallery">the gallery.</a></p>
     <h3>Issues / Comments / Questions</h3>
     <p>Site issues and feature requests can be reported to the issues page of <a href="https://github.com/artBoffin/4QR.xyz/issues">the 4QR.xyz GitHub page.</a>
