--- a/encode/index.html
+++ b/encode/index.html
@@ -126,7 +126,11 @@ function run() {
     <br/>
     <p>Include library wrapper (default compressed):</p>
     <label>
-        <input type="radio" ; name="library" ; value="p5/1m/?" ;>P5.js v0.5.8</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
+        <input type="radio" ; name="library" ; value="p5/1m/?" ;>P5.js 0.5.8</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
+    <br/>
+    <label>
+    <label>
+        <input type="radio" ; name="library" ; value="p5/1n/?" ;>P5.js 0.5.9</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
     <br/>
     <label>
     <label>
