--- a/encode/index.html
+++ b/encode/index.html
@@ -91,7 +91,7 @@
     editor.resize(true);
     editor.setOption("minLines", 10);
     editor.setOption("maxLines", 50);
-
+    editor.getSession().setUseWrapMode(true);
 
     function load() {
         gapi.client.setApiKey('AIzaSyBheyryTIUnSk0-MnVrHtjwdqEM8xbfBRs');
