ace positon fix

--- a/encode/index.html
+++ b/encode/index.html
@@ -13,10 +13,7 @@
 </head>
 <style type="text/css" media="screen">
 .ace_editor {
-    border: 1px solid lightgray;
-    margin: auto;
-    width: 60%;
-    text-align: left;
+    position: relative;
 }
 
 .scrollmargin {
@@ -30,7 +27,7 @@
     <a href="https://www.4QR.xyz/about/">About this website</a>
     <br/>
     <p>Enter in code below, then click encode button.</p>
-    <div id="editor" ; height="auto" ; width="auto">
+    <div id="editor" ; style="display: block; margin-left:5px; height: auto ; width: 80%">
     </div>
     <br/>
     <p>Options:</p>
@@ -45,10 +42,10 @@
     <br/>
     <p>Include library wrapper (default compressed):</p>
     <label>
-        <input type="radio" ; name="library" ; value="p5/1m/?" ;>P5.js 0.5.8</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
+        <input type="radio" ; name="library" ; value="p5/1n/?" ;>P5.js 0.5.9</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
     <br/>
     <label>
-        <input type="radio" ; name="library" ; value="p5/1n/?" ;>P5.js 0.5.9</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
+        <input type="radio" ; name="library" ; value="p5/1m/?" ;>P5.js 0.5.8</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
     <br/>
     <label>
         <input type="radio" ; name="library" ; value="pa/1a/?" ;>paper.js v0.11.3</label><a href="https://www.4QR.xyz/reference/#pa"> ?</a>
