--- a/encode/index.html
+++ b/encode/index.html
@@ -35,26 +35,26 @@
         <input type="checkbox" id="qr" ;>Generate QR codes</label>
     <br/>
     <label>
-        <input type="radio" name="library" value="c/?" ; checked="checked">Compressed (default)</label><a href="https://www.4QR.xyz/reference/#com"> ?</a>
+        <input type="radio" name="library" value="c/?" checked="checked" onchange="radioChange()">Compressed (default)</label><a href="https://www.4QR.xyz/reference/#com"> ?</a>
     <br/>
     <label>
-        <input type="radio" name="library"  value="r/?">No compression</label><a href="https://www.4QR.xyz/reference/#noc"> ?</a>
+        <input type="radio" name="library" value="r/?" onchange="radioChange()">No compression</label><a href="https://www.4QR.xyz/reference/#noc"> ?</a>
     <br/>
     <p>Include library wrapper (default compressed):</p>
     <label>
-        <input type="radio"  name="library"  value="p5/1n/?">P5.js 0.5.9</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
+        <input type="radio" name="library" value="p5/1n/?" onchange="radioChange()">P5.js 0.5.9</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
     <br/>
     <label>
-        <input type="radio"  name="library"  value="p5/1m/?">P5.js 0.5.8</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
+        <input type="radio" name="library" value="p5/1m/?" onchange="radioChange()">P5.js 0.5.8</label><a href="https://www.4QR.xyz/reference/#p5"> ?</a>
     <br/>
     <label>
-        <input type="radio"  name="library"  value="pa/1a/?">paper.js v0.11.3</label><a href="https://www.4QR.xyz/reference/#pa"> ?</a>
+        <input type="radio" name="library" value="pa/1a/?" onchange="radioChange()">paper.js v0.11.3</label><a href="https://www.4QR.xyz/reference/#pa"> ?</a>
     <br/>
     <label>
-        <input type="radio"  name="library"  value="th/2d/?">three.js v85</label><a href="https://www.4QR.xyz/reference/#th"> ?</a>
+        <input type="radio" name="library" value="th/2d/?" onchange="radioChange()">three.js v85</label><a href="https://www.4QR.xyz/reference/#th"> ?</a>
     <br/>
     <label>
-        <input type="radio"  name="library"  value="dw/?">Dwitter</label><a href="https://www.4QR.xyz/reference/#dw"> ?</a>
+        <input type="radio" name="library" value="dw/?" onchange="radioChange()">Dwitter</label><a href="https://www.4QR.xyz/reference/#dw"> ?</a>
     <br/>
     <br/>
     <input type="submit" name="button" id="encode" onclick="run()" value="Encode" />
@@ -62,7 +62,7 @@
     <hr>
     <br/>
     <br/>
-    <div class="results"  style="font-size:180%"></div>
+    <div class="results" style="font-size:180%"></div>
     <br/>
     <br/>
     <div id="urlShort"></div>
@@ -71,30 +71,45 @@
     <div class="tinyurl" ;></div>
     <br/>
     <br/>
-    <div class="qrcodeLText"  style="font-size:180%"></div>
+    <div class="qrcodeLText" style="font-size:180%"></div>
     <br/>
     <div id="qrcodeL" style="display: block; width:640px; height:640px; margin-left:5px"></div>
     <br/>
     <br/>
-    <div class="qrcodeSText"  style="font-size:180%"></div>
+    <div class="qrcodeSText" style="font-size:180%"></div>
     <br/>
     <br/>
     <div id="qrcodeS" style="display: block; width:640px; height:640px; margin-left:5px;"></div>
     <script>
     var editor = ace.edit("editor");
-    editor.setTheme("ace/theme/monokai");
-    editor.getSession().setMode("ace/mode/html");
-    editor.setAutoScrollEditorIntoView(true);
-    editor.resize(true);
-    editor.setOption("minLines", 10);
-    editor.setOption("maxLines", 50);
-    editor.getSession().setUseWrapMode(true);
 
     function load() {
         gapi.client.setApiKey('AIzaSyBheyryTIUnSk0-MnVrHtjwdqEM8xbfBRs');
         gapi.client.load('urlshortener', 'v1', function() {});
+        editor.setTheme("ace/theme/monokai");
+        editor.getSession().setMode("ace/mode/html");
+        editor.setAutoScrollEditorIntoView(true);
+        editor.resize(true);
+        editor.setOption("minLines", 10);
+        editor.setOption("maxLines", 50);
+        editor.getSession().setUseWrapMode(true);
     }
     window.onload = load;
+
+    function radioChange() {
+        var radios = document.getElementsByName('library');
+        for (var i = 0, length = radios.length; i < length; i++) {
+            if (radios[i].checked) {
+                selectedLib = radios[i].value;
+                break;
+            }
+        }
+        if (selectedLib != "r/?" && selectedLib != "c/?") {
+            editor.getSession().setMode("ace/mode/javascript");
+        } else {
+            editor.getSession().setMode("ace/mode/html");
+        }
+    }
 
     function makeShort(longUrl) {
         var request = gapi.client.urlshortener.url.insert({
@@ -131,7 +146,13 @@
             }));
             compressed = compressed.replace(/\+/g, '-').replace(/\//g, '_').replace(/\=/g, '');
             var addr = "https://4QR.xyz/" + selectedLib + compressed;
+            if (selectedLib != "c/?") {
+                editor.getSession().setMode("ace/mode/javascript");
+            } else {
+                editor.getSession().setMode("ace/mode/html");
+            }
         } else {
+            editor.getSession().setMode("ace/mode/html");
             var addr = "https://4QR.xyz/r/?" + encodeURIComponent(btoa(inCode));
         }
         return addr;
