--- a/about/index.html
+++ b/about/index.html
@@ -34,6 +34,10 @@
         <br>(as well as any other code that a browser can display) is a non centralized way.
         <br>The data can be stored in QR codes, link shorteners, NFC cards or the blockchain.
     </p>
+    <h4>Q: How long can my URL be?</h4>
+    <p>
+        A: This varies by browsers and platforms, but URLs with up to 9999 total characters have been tested as working in desktop chrome.
+    </p>
     <h4>Q: Why does this site look like it is from 1997?</h4>
     <p>
         A: Everything in the site is trimmed down and optimized for bandwidth (at least that's the excuse).
